# live-paper

./: .env.example  .gitignore  Makefile  README.md
.github/workflows/: deploy.yml
backend/: .env.example.expert  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_paper_abstract_and_status.py
backend/app/: factory.py  main.py
backend/app/agents/: base.py  expert_router.py  gap_detector.py  ingestion.py  response_ingestion.py  retrieval.py
backend/app/api/: chat.py  escalation.py  expert_responses.py  experts.py  health.py  papers.py  search.py
backend/app/core/: config.py  security.py  tracing.py
backend/app/expert_tools/: .gitignore  api.py  models.py
backend/app/models/: db.py  paper.py
backend/app/services/: database.py  embeddings.py  graph.py  queue.py  storage.py
backend/app/tools/: .gitignore  README.md  database_manager.py  main.py  research_vetter.py
backend/app/tools/email_templates/: ask_researcher_question.html  welcome_researcher_email.html
backend/app/tools/trash/: assessment.schema.trh  extra.trash  ii.trh  llm_researcher_tool.trh
backend/tests/: conftest.py
backend/tests/integration/: test_api.py  test_expert_responses.py
backend/tests/unit/: test_gap_detector.py  test_models.py
frontend/: .env.local.example  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/components/: AdminNav.tsx  Footer.tsx  ResearchChat.tsx
frontend/lib/: api.ts
frontend/pages/: chat.tsx  dashboard.tsx  expert-response.tsx  experts.tsx  index.tsx  search.tsx
infra/: apprunner.tf  aurora.tf  frontend.tf  main.tf  outputs.tf  s3.tf  sagemaker.tf  sqs.tf  terraform.tfvars.example  variables.tf
infra/cloudfront/: rewrite-index.js
