[project]
name = "livepaper-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Web
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.44.0",
    "python-multipart>=0.0.9",
    "httpx>=0.28.0",

    # Config & validation
    "pydantic>=2.13.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.2.0",

    # AI agents
    "openai-agents>=0.0.19",
    "litellm>=1.40.0",

    # AWS
    "boto3>=1.34.0",

    # PDF parsing
    "pymupdf>=1.24.0",

    # Graph DB
    "neo4j>=5.20.0",

    # Observability
    "langfuse>=2.0.0",

    # Retry
    "tenacity>=8.2.0",

    # Database (Aurora Serverless v2)
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
prod = [
    "gunicorn>=23.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
    "mypy>=1.20.0",
    "ruff>=0.15.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
